fix spacing of cards in sidebar

--- a/css/main.less
+++ b/css/main.less
@@ -373,10 +373,12 @@ h4 {
 
   .card {
     border-color: @gray-600;
+    margin-bottom: @card-margin;
   }
 
   .cards {
     padding-bottom: 0;
+    padding: 0 @card-margin;
 
     &.anticipated .card {
       opacity: 0.5;
